--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "tsc",
     "watch": "tsc -w",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "build": "rimraf build && webpack --progress --config webpack.prod.cjs"
   },
   "bin": {
     "cdk": "bin/cdk.js"
@@ -17,12 +17,21 @@
     "@aws-cdk/aws-lambda": "1.72.0",
     "@aws-cdk/core": "1.72.0",
     "@types/node": "14.14.6",
+    "@types/webpack": "4.41.24",
     "@typescript-eslint/eslint-plugin": "4.6.1",
     "@typescript-eslint/parser": "4.6.1",
     "aws-cdk": "1.72.0",
     "eslint": "7.13.0",
     "fastify": "3.7.0",
+    "fork-ts-checker-webpack-plugin": "6.0.0",
+    "path": "0.12.7",
     "prettier": "2.1.2",
-    "typescript": "4.0.5"
+    "rimraf": "3.0.2",
+    "terser-webpack-plugin": "5.0.3",
+    "ts-loader": "8.0.10",
+    "typescript": "4.0.5",
+    "webpack": "5.4.0",
+    "webpack-cli": "4.2.0",
+    "webpack-merge": "5.3.0"
   }
 }
