chore(misc): try deploy lambda

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "watch": "tsc -w",
     "cdk": "cdk",
-    "deploy": "yarn cdk deploy CdkStack --require-approval=never -c mode=production",
+    "deploy": "yarn build && yarn cdk deploy CdkStack --require-approval=never -c mode=production --progress events --profile default",
     "synth": "yarn build && yarn cdk synth",
     "synthCheck": "yarn build && yarn cdk synth >/dev/null",
     "build": "rimraf build && webpack --progress --config webpack.prod.cjs"
