--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@typescript-eslint/eslint-plugin": "4.6.1",
     "@typescript-eslint/parser": "4.6.1",
     "aws-cdk": "1.72.0",
+    "aws-serverless-express": "3.3.8",
     "eslint": "7.13.0",
     "fastify": "3.7.0",
     "fork-ts-checker-webpack-plugin": "6.0.0",
@@ -37,5 +38,8 @@
     "webpack": "5.4.0",
     "webpack-cli": "4.2.0",
     "webpack-merge": "5.3.0"
+  },
+  "dependencies": {
+    "express": "4.17.1"
   }
 }
