--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@aws-cdk/aws-cloudfront": "1.72.0",
     "@aws-cdk/aws-lambda": "1.72.0",
     "@aws-cdk/core": "1.72.0",
+    "@types/aws-serverless-express": "3.3.3",
     "@types/node": "14.14.6",
     "@types/webpack": "4.41.24",
     "@typescript-eslint/eslint-plugin": "4.6.1",
